# dagloom

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dagloom/: __init__.py
dagloom/cli/: __init__.py  main.py
dagloom/connectors/: __init__.py  base.py  http.py  kafka.py  mongodb.py  mysql.py  postgres.py  redis.py  s3.py
dagloom/core/: __init__.py  context.py  dag.py  node.py  pipeline.py
dagloom/demo/: __init__.py  etl_pipeline.py
dagloom/notifications/: __init__.py  base.py  email.py  registry.py  webhook.py
dagloom/scheduler/: __init__.py  cache.py  checkpoint.py  executor.py  process_executor.py  scheduler.py  triggers.py
dagloom/security/: __init__.py  auth.py  encryption.py  secrets.py
dagloom/server/: __init__.py  api.py  app.py  codegen.py  middleware.py  watcher.py  ws.py
dagloom/store/: __init__.py  db.py  models.py
docs/en/: ARCHITECTURE.md  getting-started.md
docs/zh/: ARCHITECTURE.md  getting-started.md
examples/: etl_example.py  hello_pipeline.py  ml_training.py
tests/: test_api.py  test_auth.py  test_auth_integration.py  test_auth_middleware.py  test_cache.py  test_cache_invalidation.py  test_checkpoint.py  test_codegen.py  test_connectors.py  test_connectors_original.py  test_context.py  test_dag.py  test_demo.py  test_executor.py  test_executor_hints.py  test_feedback_fixes.py  test_http_pagination.py  test_improvements.py  test_node.py  test_notifications.py  test_observability.py  test_pipeline.py  test_scheduler.py  test_secrets.py  test_versions.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: DagEditor.tsx  DagNode.tsx  ExecutionLog.tsx  MetricsDashboard.tsx  NodePanel.tsx  PipelineList.tsx  Toolbar.tsx  VersionHistory.tsx
web/src/hooks/: usePipeline.ts  useWebSocket.ts
web/src/types/: index.ts
